--- a/style.css
+++ b/style.css
@@ -91,3 +91,9 @@ button a {
     background-color: #0BA2C0;
     transition: all .50s ease ;
 }
+footer {
+
+    margin-top:200px;
+    border-bottom: 2px solid rgb(255, 255, 255, 0.06);
+    
+}
